--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Group Expenses</string>
+    <string name="add_expense">Ausgabe hinzufügen</string>
+    <string name="edit">Bearbeiten</string>
+    <string name="stats">Statistik</string>
+    <string name="invite">Leute einladen</string>
+    <string name="jump_to_current_date">Zum aktuellen Datum springen</string>
 </resources>
