--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="create_group">Gruppe erstellen</string>
     <string name="payments">Zahlungen</string>
     <string name="groups">Gruppen</string>
+    <string name="sign_out">Abmelden</string>
 </resources>
