--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="payments">Zahlungen</string>
     <string name="groups">Gruppen</string>
     <string name="sign_out">Abmelden</string>
+    <string name="fmt_expenses_EUR" translatable="false">%.2f €</string>
+    <string name="fmt_members" translatable="false">%d Mitglieder</string>
+    <string name="no_groups">Du bist noch in keiner Gruppe</string>
 </resources>
