--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="fmt_members" translatable="false">%d Mitglieder</string>
     <string name="fmt_latest_update" translatable="false">Zuletzt aktualisiert: %s</string>
     <string name="group_no_expenses">Für diese Gruppe wurden noch keine Ausgaben getätigt!</string>
+    <string name="user_no_payments">Du hast noch keine Zahlungen getätigt</string>
 </resources>
