--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
+    <!-- Formatter -->
+    <string name="fmt_expenses_EUR" translatable="false">%.2f €</string>
+    <string name="fmt_members" translatable="false">%d Mitglieder</string>
+    <string name="fmt_latest_update" translatable="false">Zuletzt aktualisiert: %s</string>
+
     <string name="app_name">Group Expenses</string>
     <string name="add_expense">Ausgabe hinzufügen</string>
     <string name="edit">Bearbeiten</string>
@@ -31,12 +36,9 @@
     <string name="expenses_date_hint">Das Fälligkeitsdatum der Ausgabe</string>
     <string name="expenses_name_hint">Ausgabenname</string>
     <string name="expenses_date_button">Aktuelles Datum verwenden</string>
-
-    <!-- Formatter -->
-    <string name="fmt_expenses_EUR" translatable="false">%.2f €</string>
-    <string name="fmt_members" translatable="false">%d Mitglieder</string>
-    <string name="fmt_latest_update" translatable="false">Zuletzt aktualisiert: %s</string>
     <string name="group_no_expenses">Für diese Gruppe wurden noch keine Ausgaben getätigt!</string>
     <string name="user_no_payments">Du hast noch keine Zahlungen getätigt</string>
     <string name="group_no_payments">In dieser Gruppe wurden noch keine Zahlungen getätigt</string>
+    <string name="group_form_name">Gruppenname</string>
+    <string name="group_name_not_empty">Gruppenname darf nicht leer sein</string>
 </resources>
