--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,9 +33,9 @@
     <string name="save">Speichern</string>
     <string name="currency_euro">€</string>
     <string name="expenses_hint">Die Kosten der Ausgabe in €</string>
-    <string name="expenses_date_hint">Das Fälligkeitsdatum der Ausgabe</string>
+    <string name="expenses_date_hint">Das Datum der Ausgabe</string>
     <string name="expenses_name_hint">Ausgabenname</string>
-    <string name="expenses_date_button">Aktuelles Datum verwenden</string>
+    <string name="expenses_date_button">Datum auswählen</string>
     <string name="group_no_expenses">Für diese Gruppe wurden noch keine Ausgaben getätigt!</string>
     <string name="user_no_payments">Du hast noch keine Zahlungen getätigt</string>
     <string name="group_no_payments">In dieser Gruppe wurden noch keine Zahlungen getätigt</string>
