--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="expense_name_missing">Ausgaben müssen einen Namen haben</string>
     <string name="expense_cost_missing">Kosten dürfen nicht leer sein</string>
     <string name="expense_cost_too_small">Kosten müssen größer als 0€ sein</string>
+    <string name="group_invitation_link">Einladungslink</string>
 </resources>
