add dependency for imageCrop

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="payment_value_missing">Zahlung darf nicht leer sein</string>
     <string name="payment_value_too_small">Zahlung muss größer als 0€ sein</string>
     <string name="payment_save_error">Zahlung konnte nicht gespeichert werden</string>
+    <string name="pick_image">Bild auswählen</string>
 </resources>
