Implement: group member translation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="accept">Annehmen</string>
     <string name="decline">Ablehnen</string>
     <string name="group_doesnt_exist">Gruppe existiert nicht!</string>
+    <string name="admin">Admin</string>
+    <string name="member">Mitglied</string>
 </resources>
