--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="expenses_date_hint">Das Datum der Ausgabe</string>
     <string name="expenses_name_hint">Ausgabenname</string>
     <string name="expenses_date_button">Datum auswählen</string>
-    <string name="group_no_expenses">Für diese Gruppe wurden noch keine Ausgaben getätigt!</string>
+    <string name="group_no_expenses">In dieser Gruppe wurden noch keine Ausgaben getätigt!</string>
     <string name="user_no_payments">Du hast noch keine Zahlungen getätigt</string>
     <string name="group_no_payments">In dieser Gruppe wurden noch keine Zahlungen getätigt</string>
     <string name="group_form_name">Gruppenname</string>
