--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="group_stats_payments_per_user">Zu zahlender Betrag pro Person:</string>
     <string name="balance">Bilanz:</string>
     <string name="no_achievements_or_shamements">Du hast bisher noch keine Achievements oder Shamements gesammelt.</string>
+    <string name="achievements_title">Achievements und Shamements</string>
 </resources>
