Bind achievements activity to fragment and button on statistics fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,5 @@
     <string name="balance">Bilanz:</string>
     <string name="no_achievements_or_shamements">Du hast bisher noch keine Achievements oder Shamements gesammelt.</string>
     <string name="achievements">Achievements und Shamements</string>
-    <string name="achievements_title">Achievements und Shamements</string>
+    <string name="achievements_title">Achievements / Shamements</string>
 </resources>
