--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,6 @@
     <string name="no_achievements_or_shamements">Du hast bisher noch keine Achievements oder Shamements gesammelt.</string>
     <string name="achievements">Achievements und Shamements</string>
     <string name="achievements_title">Achievements / Shamements</string>
+    <string name="achievements_text">Achievements</string>
+    <string name="shamements_text">Shamements</string>
 </resources>
