--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,5 @@
     <string name="confirm_leave_descB">Bist du dir sicher, dass du diese Gruppe verlassen möchtest? Ohne eine Einladung kannst du ihr nicht erneut beitreten.</string>
     <string name="confirm_kick_desc1">"Bist du dir sicher, dass du "</string>
     <string name="confirm_kick_desc2">" aus dieser Gruppe entfernen möchtest?"</string>
+    <string name="kicked_message">Ein Admin hat dich aus dieser Gruppe entfernt.</string>
 </resources>
