--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="confirm_kick_desc2">" aus dieser Gruppe entfernen möchtest?"</string>
     <string name="kicked_message">Ein Admin hat dich aus dieser Gruppe entfernt.</string>
     <string name="fragment_user_groups">Gruppen</string>
+    <string name="group_form_name_hint">Z.B. Kneipentour</string>
 </resources>
